# golang-analyzer

./: .gitignore  Cargo.toml  README.md  TASK.md  analyzer.go  build-and-run.sh  channels.go  classify.go  describe.go  go.mod  go.sum  main.go  node.go  scan.go  server.go  trace.go
client/: Cargo.toml  README.md  main.go
client/src/: main.rs
examples/: after  before  demo  generics.go  go.mod  main.go  pipeline.go  recurse.go  scan-ec-fork-15-10-15.md  scan-eos-fork-14-35-19.md  shapes.go
examples/buggy/: closedchan.go  files.go  leaks.go  races.go
examples/extlib/: extlib.go
examples/theoretical/: branches.go  guards.go  handoffs.go  leaks.go  pointers.go  sharding.go
src/: main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx  App.tsx  TraceView.jsx  exportMd.js  index.css
