[package]
name = "code-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-go = "0.21"
walkdir = "2.5"

# Server + embedding
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tower = "0.4"
